# SimpleWhisper

./: CMakeLists.txt  README.md  colcon.pkg  package.xml  pixi.toml
.github/workflows/: ros2_jazzy_code_compiles.yml
binding/ros2/: whisper_node.cpp  whisper_node.hpp
binding/ros2/audio_async_ros/: audio_async_ros.cpp  audio_async_ros.hpp
example/simple_speech_demo/: simple_speech_demo.cpp
example/simple_speech_demo/audio_async/: audio_async.cpp  audio_async.hpp
rattler/: bld_ament_cmake.bat  build_ament_cmake.sh  recipe.yaml
src/: simplewhisper.cpp  simplewhisper.hpp
